syntax = "proto3";

import "com/welldressedmen/nari/data/dark_theme_config.proto";

option java_package = "com.welldressedmen.nari.core.datastore";
option java_multiple_files = true;

message UserPreferences {
    bool is_login = 1;

    DarkThemeConfigProto dark_theme_config = 2;

    // NEXT AVAILABLE ID: 3
}
